--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -44,9 +44,6 @@
 
   c-main-content {background-color: #E2E2E2;}
 
-  .container {width: 100%;}
-
-
 
 </style>
 
@@ -78,7 +75,7 @@
 
 
     <link rel="import" href="/corporate-ui/template/html-copy-paste/c-html-copy-paste.html">
-    <c-html-copy-paste></c-html-copy-paste>   
+    <c-html-copy-paste fullbleed></c-html-copy-paste>   
 
   </c-main-content>
   <c-corporate-footer></c-corporate-footer>
