--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -64,10 +64,10 @@
         <nav-item location="/corporate-ui/styleguide/">Style Guide</nav-item>            
         <nav-item location="/corporate-ui/developer/" class="active">Web Applications
           <sub-navigation caption="Scania Bootstrap">
-            <nav-item location="../developer/scania-bootstrap-app.html">Bootstrap CSS for Applications</nav-item>
-            <nav-item location="../developer/scania-bootstrap-public.html">Bootstrap Public CSS</nav-item>  
-            <nav-item location="html-template.html" class="active">Cut and Paste HTML</nav-item>
-          </§sub-navigation>  
+            <nav-item location="/corporate-ui/developer/scania-bootstrap-app.html">Bootstrap CSS for Applications</nav-item>
+            <nav-item location="/corporate-ui/developer/scania-bootstrap-public.html">Bootstrap Public CSS</nav-item>  
+            <nav-item location="/corporate-ui/template/html-copy-paste/html-copy-paste.html" class="active">Cut and Paste HTML</nav-item>
+          </sub-navigation>  
         </nav-item>
         <nav-item location="/corporate-ui/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
