--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -1,21 +1,22 @@
+
 <!DOCTYPE html>
-<html lang="en-GB" class="corporate-ui">
+<html lang="en-GB">
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
   <meta charset="utf-8">
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
+  <title>UX Library - Copy Paste HTML</title>
 
-  <title>UX Library - HTML Copy & Paste</title>
   <script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
   <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
+  <link rel="stylesheet" href="css/scania-bootstrap-docs.css">
+  <link rel="stylesheet" href="../../../css/ux-library.css">
 
   <!--  <link rel="stylesheet" href="https://static.scania.com/resources/fonts/scania-sans/cyrillic/scania-cyrillic-fonts.css" type="text/css">  -->   
 
   <link rel="stylesheet" type="text/css" href="https://static.scania.com/resources/fonts/scania-sans/scania-tools-fonts.css">
-
-
-
 
 
   <style>
@@ -45,11 +46,21 @@
   c-main-content {background-color: #E2E2E2;}
 
 
-</style>
+  .bs-callout,
+  .highlight {
+      display: none;
+  }
 
+  </style>
 </head>
 
-<body class="scania app">
+<body class="scania">
+  <c-corporate-header site-name="UX Library" site-url="/ux-library/">
+    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+  </c-corporate-header>
+
+  <c-main-content>
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
@@ -66,18 +77,24 @@
           <sub-navigation caption="Scania Bootstrap">
             <nav-item location="/corporate-ui/developer/scania-bootstrap-app.html">Bootstrap CSS for Applications</nav-item>
             <nav-item location="/corporate-ui/developer/scania-bootstrap-public.html">Bootstrap Public CSS</nav-item>  
-            <nav-item location="/corporate-ui/template/html-copy-paste/html-copy-paste.html" class="active">Cut and Paste HTML</nav-item>
+            <nav-item location="/corporate-ui/template/html-copy-paste/html-copy-paste.html" class="active">Copy Paste HTML</nav-item>
           </sub-navigation>  
         </nav-item>
         <nav-item location="/corporate-ui/mobile-apps/">Mobile Apps</nav-item>
+            <nav-item location="https://github.scania.com/Scania/corporate-ui/issues/new">Report an Issue</nav-item>
+            <nav-item location="/ux-library/developer/support.html">Support</nav-item>
       </primary-items>
     </c-main-navigation>
 
+    <section class="app">
 
     <link rel="import" href="/corporate-ui/template/html-copy-paste/c-html-copy-paste.html">
-    <c-html-copy-paste fullbleed></c-html-copy-paste>   
+    <c-html-copy-paste fullbleed></c-html-copy-paste> 
+
+    </section>
 
   </c-main-content>
+  
   <c-corporate-footer></c-corporate-footer>
 </body>
 </html>
