--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -4,8 +4,8 @@
 
     <style>
 
-        section {
-          padding: 80px 20px;
+        c-html-copy-paste {
+          padding: 0 20px;
           font-family: 'Scania Sans Semi Condensed';
         }
 
@@ -351,7 +351,6 @@
     <link rel="stylesheet" type="text/css" href="https://static.scania.com/resources/fonts/scania-sans/scania-tools-fonts.css">
     <!--  <link rel="stylesheet" href="https://static.scania.com/resources/fonts/scania-sans/cyrillic/scania-cyrillic-fonts.css" type="text/css">  -->   
 
-    <section>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
@@ -1065,7 +1064,6 @@
         </div>  --> 
         </div>  
       </div>
-    </section>
   </template>
 
   <!-- All developers are using Google Chrome, so we do not test for other browsers -->
