--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -4,8 +4,8 @@
 
     <style>
 
-        c-html-copy-paste {
-          padding: 0 20px;
+        section {
+          padding: 20px 20px;
           font-family: 'Scania Sans Semi Condensed';
         }
 
@@ -671,7 +671,7 @@
             </div>             
             <div class="col-md-6">  
 <div class="panel panel-default copyable">
-  <div class="panel-body" style="background-image: url('https://github.scania.com/corporate-ui/template/html-copy-paste/img/image.jpg');background-repeat: no-repeat">
+  <div class="panel-body" style="background-image: url('img/image.jpg');background-repeat: no-repeat">
       <span><i class="scania-icon-no-phone-during-driving md neg"></i></span>
       <span><i class="scania-icon-listen-to-demo-driver md neg"></i></span>
       <span><i class="scania-icon-connected-services-bus md neg"></i></span>
