--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -1049,8 +1049,7 @@
         </div>  
         <div class="row">
           <div class="col-md-6">
-
-     
+            <input type="file">
           </div>
         </div>  
         </div>  
@@ -1059,6 +1058,8 @@
 
   <!-- All developers are using Google Chrome, so we do not test for other browsers -->
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject-all-but-chrome.js"></script>
+
+  <script src="https://static.scania.com/vendors/components/pure-js/file-upload/1.0.0/file-upload.js" type="text/javascript"></script>
 
   <script>
     Polymer({
