Added Browser Reject

--- a/docs/template/de-duping.html
+++ b/docs/template/de-duping.html
@@ -6,6 +6,7 @@
     <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
     <title>Scania One - Customer Service</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
     <link rel="stylesheet" href="https://static.scania.com/vendors/components/pure-js/timeline.js/ver.2017-03-31-15-29-59/compiled/css/timeline.css">     
   <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
    <link rel="stylesheet" href="https://static.scania.com/vendors/components/pure-js/timeline.js/ver.2017-03-31-15-29-59/compiled/css/timeline.css">   
@@ -1701,7 +1702,7 @@
 <body  class="scania">
 
     <c-corporate-header project="Corporate UI" site-name="One">
-        <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
+        <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
         <nav-item location="#">Log Out</nav-item>
     </c-corporate-header>
 
