--- a/docs/component/index.html
+++ b/docs/component/index.html
@@ -9,6 +9,7 @@
   </noscript>
 
   <title>Scania UX Library</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
   <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
 
   <link rel="stylesheet" href="/corporate-ui/ux-lib.css">
@@ -28,8 +29,8 @@
         <option>development</option>
       </select>
     </nav-item>
-    <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
-    <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
+    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
   <c-main-content>
