--- a/docs/design-patterns/components/alerts.html
+++ b/docs/design-patterns/components/alerts.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
 
         <title>Alerts and notifications - Design Patterns</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
         <meta name="description" content="">
         <meta name="keywords" contnet="">
