--- a/docs/design-patterns/components/megamenu-2.html
+++ b/docs/design-patterns/components/megamenu-2.html
@@ -14,6 +14,7 @@
 <html>
 <head>
   <title>Bootstrap Megamenu</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
   <meta charset="utf-8">
 
