--- a/docs/template/index.html
+++ b/docs/template/index.html
@@ -8,6 +8,7 @@
 
 
   <title>Scania UX Library</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
   <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
 
   <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/main-hero/main-hero.html">
@@ -27,8 +28,8 @@
 <body unresolved class="scania ux-lib documentation">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
-    <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
-    <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
+    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
   <c-main-content>
