--- a/docs/template/light-examples.html
+++ b/docs/template/light-examples.html
@@ -8,6 +8,7 @@
   </noscript>
 
   <title>UX Library</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
   <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
   <link rel="stylesheet" href="/corporate-ui/ux-lib.css">
@@ -30,8 +31,8 @@
 <body class="scania ux-lib app" data-env="dev">
 
   <c-corporate-header site-name="Fleet Management" site-url="/corporate-ui/">
-    <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
-    <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
+    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
     <section>
