--- a/docs/template/main-hero.htm
+++ b/docs/template/main-hero.htm
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
 
   <title>Scania UX Library</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
   <script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
   <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
@@ -15,8 +16,8 @@
 <body unresolved class="scania ux-lib">
 
   <c-corporate-header site-name="UX Library">
-    <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
-    <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
+    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
   <c-main-content class="light">
