--- a/docs/template/starter-kit/index.html
+++ b/docs/template/starter-kit/index.html
@@ -8,6 +8,7 @@
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
   <title>Scania</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
   <!-- corporate-ui.js includes Bootstrap, handling for old browsers, corporate header, main menu and footer as well as Web Components polyfills, if needed -->
   <script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
@@ -23,8 +24,8 @@
   <!-- The header main menu and footer we hope are quite self explainatory :-) --> 
     
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
-    <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
-    <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
+    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
     
   <!-- c-main-content tag should be placed here, it is setting the layout meassures of the page -->     
