--- a/docs/component/inline-editor/inline-editor.html
+++ b/docs/component/inline-editor/inline-editor.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0"/>
 
 	<title>Edit document</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
 	<script src="https://static.scania.com/resources/logotype/favicon/favicons.js"></script>
 
