--- a/docs/template/advanced-tables/example-widget-reflow3.html
+++ b/docs/template/advanced-tables/example-widget-reflow3.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>jQuery tablesorter 2.0 - Table Reflow Widget (beta)</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
 	<!-- demo -->
     <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
