--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -6,6 +6,7 @@
 	<noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
 	<title>Your Template</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
 <!-- 	Using Angular or React, in the index file, you'll need to skip the prealoading when calling Corporate UI with the preload=false parameter -->
 
