--- a/docs/template/banner.html
+++ b/docs/template/banner.html
@@ -4,7 +4,8 @@
 
 <head id="ctl00_Head1"><title>
 	VRPC
-</title><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link href="https://static.scania.com/resources/images/compressed/logotypes/favicon.ico" rel="shortcut icon" />
+</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link href="https://static.scania.com/resources/images/compressed/logotypes/favicon.ico" rel="shortcut icon" />
     <!-- Scania Bootstrap -->
     <link rel="stylesheet" href="https://static.scania.com/prod/css/global/ver20130920/scania-intranet-styles.css" />
     
