--- a/docs/template/basic-template-public.html
+++ b/docs/template/basic-template-public.html
@@ -6,6 +6,7 @@
 		<noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
 		<title>Corporate UI - Minimum Template</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
 		<script src="https://static.scania.com/vendors/frameworks/jQuery/2.2.2/jquery.min.js"></script>
 		<script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
