--- a/docs/template/starter-kit/hello-world/easter-egg/easter-egg.html
+++ b/docs/template/starter-kit/hello-world/easter-egg/easter-egg.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Easter Egg Polymer Test</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 </head>
 <body unresolved>
 
