--- a/docs/template/starter-kit/hello-world/hello-world/hello-world-one-pager.html
+++ b/docs/template/starter-kit/hello-world/hello-world/hello-world-one-pager.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>hello-world web component</title>
+  <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
     <!-- Import standard polyfill to make it work in all browsers, not needed for the latest versions -->
     <script src="https://static.scania.com/vendors/frameworks/webcomponentsjs/webcomponents-lite.min.js"></script>
