--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -1049,7 +1049,7 @@
         </div>  
         <div class="row">
           <div class="col-md-6">
-            <input type="file">
+            <input type="file" class="file-input">
           </div>
         </div>  
         </div>  
@@ -1059,7 +1059,9 @@
   <!-- All developers are using Google Chrome, so we do not test for other browsers -->
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject-all-but-chrome.js"></script>
 
-  <script src="https://static.scania.com/vendors/components/pure-js/file-upload/1.0.0/file-upload.js" type="text/javascript"></script>
+  <script src="https://static.scania.com/vendors/components/pure-js/file-upload/1.0.0/js/file-upload.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="https://static.scania.com/vendors/components/pure-js/file-upload/1.0.0/css/file-upload.css"></link>
+ 
 
   <script>
     Polymer({
