--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -1,25 +1,29 @@
 
+
+
+
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
   <meta charset="utf-8">
-  <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
-
   <title>UX Library - Copy Paste HTML</title>
-
   <script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script>   
   <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
-
 </head>
 
+
 <body class="scania">
+
+
   <c-corporate-header site-name="UX Library" site-url="/ux-library/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
+
   <c-main-content>
+
 
     <c-main-navigation show-search>
       <primary-items>
@@ -38,15 +42,21 @@
       </primary-items>
     </c-main-navigation>
 
+
     <section class="app">
 
-    <link rel="import" href="/corporate-ui/template/html-copy-paste/c-html-copy-paste.html">
-    <c-html-copy-paste fullbleed></c-html-copy-paste> 
+
+      <link rel="import" href="https://scania.github.io//corporate-ui/template/html-copy-paste/c-html-copy-paste.html">
+
+      <c-html-copy-paste fullbleed></c-html-copy-paste> 
+
 
     </section>
 
+
   </c-main-content>
   
+
   <c-corporate-footer></c-corporate-footer>
 
 
