--- a/docs/component/inline-editor/inline-editor.html
+++ b/docs/component/inline-editor/inline-editor.html
@@ -66,7 +66,7 @@
 
 	</style>
 
-  	<link rel="stylesheet" href="//static.scania.com/ux-library/ux-lib.css">
+  	<link rel="stylesheet" href="/corporate-ui/ux-lib.css">
 
 </head>
 <body class="scania">
@@ -161,7 +161,7 @@
 
 
 
-  		<script src="//static.scania.com/ux-library/ux-lib.js"></script>
+  		<script src="/corporate-ui/ux-lib.js"></script>
 	</body>
 	</html>
 
