--- a/docs/design-patterns/components/alerts.html
+++ b/docs/design-patterns/components/alerts.html
@@ -25,7 +25,7 @@
 
         <link href="../styles/vendor.css" rel="stylesheet"/>
         <link href="../styles/main.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="https://static.scania.com/ux-library/ux-lib.css">
+        <link rel="stylesheet" href="/corporate-ui/ux-lib.css">
 
 
 
@@ -414,7 +414,7 @@
     </div>
 </c-main-content>
 
-        <script src="https://static.scania.com/ux-library/ux-lib.js"></script>
+        <script src="/corporate-ui/ux-lib.js"></script>
         <script src="../scripts/vendor.js"></script>
         <script src="../scripts/plugins.js"></script>        
         <script src="../scripts/main.js"></script>
