--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -37,7 +37,7 @@
           </sub-navigation>  
         </nav-item>
         <nav-item location="/corporate-ui/mobile-apps/">Mobile Apps</nav-item>
-            <nav-item location="https://github.scania.com/Scania/corporate-ui/issues/new">Report an Issue</nav-item>
+            <nav-item location="https://github.com/scania/corporate-ui/issues/new">Report an Issue</nav-item>
             <nav-item location="/ux-library/developer/support.html">Support</nav-item>
       </primary-items>
     </c-main-navigation>
