c-html-copy-paste-components element

--- a/docs/template/html-copy-paste/html-copy-paste-components.html
+++ b/docs/template/html-copy-paste/html-copy-paste-components.html
@@ -48,7 +48,7 @@
 
       <link rel="import" href="https://scania.github.io//corporate-ui/template/html-copy-paste/c-html-copy-paste-components.html">
 
-      <c-html-copy-paste fullbleed></c-html-copy-paste> 
+      <c-html-copy-paste-components fullbleed></c-html-copy-paste-components> 
 
 
     </section>
