--- a/docs/template/html-copy-paste/c-html-copy-paste-components.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-components.html
@@ -173,22 +173,22 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-<header class="c-page-header copyable">
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="page-header">
-        <h3>Page Design</h3>
-        <h4>For Scania Applications</h4>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="btn-toolbar pull-right">
-        <button class="btn btn-default">Print</button>
-        <button class="btn btn-success">Save</button>                        
-      </div>
-    </div>
-  </div>
-</header>
+            <header class="c-page-header">
+              <div class="row">
+                <div class="col-sm-6">
+                  <div class="page-header">
+                    <h3>Copy Components</h3>
+                    <h4>Hover and click</h4>
+                  </div>
+                </div>
+                <div class="col-sm-6">
+<!--                   <div class="btn-toolbar pull-right">
+                    <button class="btn btn-default">Print</button>
+                    <button class="btn btn-success">Save</button>                        
+                  </div> -->
+                </div>
+              </div>
+            </header>
           </div>
         </div>
         <div class="row">
@@ -196,8 +196,8 @@
 
 
   <div class="code-to-copy"> 
-    <c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
-    </c-highcharts>
+    <dont-run-c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
+    </dont-run-c-highcharts>
     <link rel="import" href="https://static.scania.com//build/global/2.3.2//html/component/Data%20Visualization/highcharts/highcharts.html">
   </div>
 
@@ -237,6 +237,8 @@
             textarea = document.getElementById('temp-element'),
         html = html.replace(/ class=""/g, '')
         html = html.replace(/ copyable/g, '')
+        html = html.replace(/dont-run-/g, '')
+        
 
         textarea.innerHTML = html
         textarea.select();
