--- a/docs/template/html-copy-paste/c-html-copy-paste-components.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-components.html
@@ -233,8 +233,9 @@
       },
       action: function() {
         var self = this,
-            html = self.parentNode.innerHTML,
+            html = self.parentNode.outerHTML,
             textarea = document.getElementById('temp-element'),
+        html.removeAttribute('class')
         html = html.replace(/ class=""/g, '')
         html = html.replace(/ copyable/g, '')
         html = html.replace(/dont-run-/g, '')
