--- a/docs/template/html-copy-paste/c-html-copy-paste-components.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-components.html
@@ -235,7 +235,9 @@
         var self = this,
             html = self.parentNode.outerHTML,
             textarea = document.getElementById('temp-element'),
-        html = html.removeAttribute('class')
+
+        html = html.replace(/ style-scope c-html-copy-paste-components/g, '')
+        html = html.replace(/style-scope c-html-copy-paste-components/g, '')
         html = html.replace(/ class=""/g, '')
         html = html.replace(/ copyable/g, '')
         html = html.replace(/dont-run-/g, '')
