--- a/docs/template/html-copy-paste/c-html-copy-paste-components.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-components.html
@@ -192,25 +192,43 @@
           </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+          <div class="col-md-6">
+            <div class="code-to-copy"> 
+  <dont-run-c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
+  </dont-run-c-highcharts>
 
+  <link rel="import" href="https://static.scania.com//build/global/2.3.2//html/component/Data%20Visualization/highcharts/highcharts.html">
+            </div>
 
-  <div class="code-to-copy"> 
-    <dont-run-c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
-    </dont-run-c-highcharts>
-    <link rel="import" href="https://static.scania.com//build/global/2.3.2//html/component/Data%20Visualization/highcharts/highcharts.html">
-  </div>
+            <div class="panel panel-default copyable">    
+              <div class="panel-body"> 
 
-<div class="panel panel-default copyable c-copyable">    
-  <div class="panel-body"> 
-
-    <c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
-    </c-highcharts>
-    <link rel="import" href="https://static.scania.com//build/global/2.3.2//html/component/Data%20Visualization/highcharts/highcharts.html">
-  </div>
-</div>
-                </div>                                 
+                <c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
+                </c-highcharts>
+                <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Data%20Visualization/highcharts/highcharts.html">
               </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="code-to-copy"> 
+  <dont-run-c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
+  </dont-run-c-highcharts>
+
+  <link rel="import" href="https://static.scania.com//build/global/2.3.2//html/component/Data%20Visualization/highcharts/highcharts.html">
+            </div>
+
+            <div class="panel panel-default copyable">    
+              <div class="panel-body"> 
+
+                <c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
+                </c-highcharts>
+                <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Data%20Visualization/highcharts/highcharts.html">
+              </div>
+            </div>
+          </div> 
+                                           
+        </div>
   </template>
 
   <!-- All developers are using Google Chrome, so we do not test for other browsers -->
