--- a/docs/template/html-copy-paste/c-html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-page.html
@@ -1,4 +1,4 @@
-<dom-module id="c-html-copy-paste-components">
+<dom-module id="c-html-copy-paste-page">
 
   <template>
 
@@ -167,8 +167,7 @@
 
     </style>
 
-    <link rel="stylesheet" type="text/css" href="https://static.scania.com/resources/fonts/scania-sans/scania-tools-fonts.css">
-    <!--  <link rel="stylesheet" href="https://static.scania.com/resources/fonts/scania-sans/cyrillic/scania-cyrillic-fonts.css" type="text/css">  -->   
+    <link rel="stylesheet" type="text/css" href="https://static.scania.com/resources/fonts/scania-sans/scania-tools-fonts.css">  
 
       <div class="container-fluid">
         <div class="row">
@@ -211,7 +210,7 @@
           </div>
 
           <div class="col-md-6">
-            <div class="code-to-copy"> 
+            <div> 
   <dont-run-c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
   </dont-run-c-highcharts>
 
@@ -237,7 +236,7 @@
 
   <script>
     Polymer({
-      is: 'c-html-copy-paste-components',
+      is: 'c-html-copy-paste-page',
       ready: function() {
         var elms = document.querySelectorAll('.copyable');
         for(var i=0; i < elms.length; i++) {
@@ -254,8 +253,8 @@
             html = self.previousElementSibling.innerHTML,
             textarea = document.getElementById('temp-element'),
 
-        html = html.replace(/ style-scope c-html-copy-paste-components/g, '')
-        html = html.replace(/style-scope c-html-copy-paste-components/g, '')
+        html = html.replace(/ style-scope c-html-copy-paste-page/g, '')
+        html = html.replace(/style-scope c-html-copy-paste-page/g, '')
         html = html.replace(/ class=""/g, '')
         html = html.replace(/ copyable/g, '')
         html = html.replace(/dont-run-/g, '')
