--- a/docs/template/html-copy-paste/c-html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-page.html
@@ -199,7 +199,7 @@
   <link rel="import" href="https://static.scania.com//build/global/2.3.2//html/component/Data%20Visualization/highcharts/highcharts.html">
             </div>
 
-            <div class="panel panel-default copyable">    
+            <div class="panel panel-default">    
               <div class="panel-body"> 
 
                 <c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
@@ -217,7 +217,7 @@
   <link rel="import" href="https://static.scania.com//build/global/2.3.2//html/component/Data%20Visualization/highcharts/highcharts.html">
             </div>
 
-            <div class="panel panel-default copyable">    
+            <div class="panel panel-default">    
               <div class="panel-body"> 
 
                 <c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
