--- a/docs/template/html-copy-paste/html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/html-copy-paste-page.html
@@ -13,7 +13,7 @@
 </head>
 
 
-<body class="scania">
+<body class="scania code-to-copy">
 
 
   <c-corporate-header site-name="UX Library" site-url="/ux-library/">
@@ -113,10 +113,12 @@
     margin-bottom: -2px;
   }
 
-  body.scania.app {font-family: 'Scania Sans Semi Condensed';
+  body {
+    font-family: 'Scania Sans Semi Condensed';
     zoom:0.8;
     background-color:#4a8ba4;
     margin:30px;}
+
 
   c-main-content {background-color: #E2E2E2;}
 
