--- a/docs/template/html-copy-paste/html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/html-copy-paste-page.html
@@ -3,7 +3,7 @@
 
 
 <!DOCTYPE html>
-<html lang="en-GB" class="code-to-copy copyable">
+<html lang="en-GB">
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
   <meta charset="utf-8">
@@ -13,7 +13,7 @@
 </head>
 
 
-<body class="scania code-to-copy">
+<body class="scania copyable">
 
 
   <c-corporate-header site-name="UX Library" site-url="/ux-library/">
@@ -241,7 +241,7 @@
             display: none;
         }      
 
-        
+
   </style>
 
   <link rel="stylesheet" type="text/css" href="https://static.scania.com/resources/fonts/scania-sans/scania-tools-fonts.css">
