--- a/docs/template/html-copy-paste/html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/html-copy-paste-page.html
@@ -115,9 +115,9 @@
 
   body {
     font-family: 'Scania Sans Semi Condensed';
-    zoom:0.8;
+    zoom:0.5;
     background-color:#4a8ba4;
-    margin:30px;}
+    margin: 5% 25%;}
 
 
   c-main-content {background-color: #E2E2E2;}
