--- a/docs/template/html-copy-paste/html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/html-copy-paste-page.html
@@ -13,8 +13,9 @@
 </head>
 
 
-<body class="scania copyable">
+<body class="scania">
 
+<div class="copyable">
 
   <c-corporate-header site-name="UX Library" site-url="/ux-library/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
@@ -59,7 +60,7 @@
 
   <c-corporate-footer></c-corporate-footer>
 
-
+</div>
 
 
 
