--- a/docs/template/html-copy-paste/html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/html-copy-paste-page.html
@@ -157,6 +157,10 @@
             cursor: copy;
             opacity:0;
             display: block;
+            z-index: 9999;
+            zoom: 50%;
+            margin: 5% 25%;
+            max-width: 50%;
         }
 
         .copyable::after {
@@ -172,7 +176,11 @@
             opacity: 0;
             background: rgb(65, 141, 206);
             color: white;
-            padding: 3px 15px 1px;         
+            padding: 3px 15px 1px;
+            z-index: 9999;
+            zoom: 50%;
+            margin: 5% 25%;
+            max-width: 50%;         
         }        
 
         .copyable.copied::before {
