Moved Copy Code

--- a/docs/template/html-copy-paste/c-html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-page.html
@@ -160,10 +160,12 @@
         .uncopyable:hover::after   {
             opacity: 1;
         }    
-
+        textarea#temp-element,
         .code-to-copy   {
             display: none;
-        }      
+        }  
+
+
 
     </style>
 
