Fixed Copy To Clipboard

--- a/docs/template/html-copy-paste/html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/html-copy-paste-page.html
@@ -172,7 +172,7 @@
 
         .copyable::after {
             position: absolute;
-            bottom: 100.1%;
+            top: 44px;
             left: 0;          
             content: 'Copy HTML to Clipboard';
             font-size: 16px;
@@ -185,8 +185,7 @@
             color: white;
             padding: 3px 15px 1px;
             z-index: 9999;
-            zoom: 50%;
-            margin: 5% 25%;
+            zoom: 200%;
             max-width: 50%;         
         }        
 
