--- a/docs/template/html-copy-paste/html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/html-copy-paste-page.html
@@ -16,7 +16,7 @@
 <body class="scania">
 
 
-<div class="code-to-copy"> 
+<xmp class="code-to-copy"> 
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
@@ -54,7 +54,8 @@
 
   <dont-run-c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
 </dont-run-c-highcharts>
-</div>
+  </dont-run-c-main-content>
+</xmp>
 
 
 <div class="copyable">
