--- a/docs/template/html-copy-paste/c-html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-page.html
@@ -241,7 +241,8 @@
       },
       action: function() {
         var self = this,
-            html = '<html><hej>',
+            html = "<div class='saved' >",
+            console.log(html),
             textarea = document.getElementById('temp-element'),
 
         html = html.replace(/ style-scope c-html-copy-paste-page/g, '')
