--- a/docs/template/html-copy-paste/c-html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-page.html
@@ -251,7 +251,7 @@
         html = html.replace(/dont-run-/g, '')
         
 
-        textarea.innerHTML = html
+        textarea.innerHTML = "<div class='saved again' >"
         textarea.select();
         document.execCommand('copy')
 
