Added alert component

--- a/docs/template/html-copy-paste/c-html-copy-paste-components.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-components.html
@@ -212,18 +212,24 @@
 
           <div class="col-md-6">
             <div class="code-to-copy"> 
-  <dont-run-c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
-  </dont-run-c-highcharts>
 
-  <link rel="import" href="https://static.scania.com//build/global/2.3.2//html/component/Data%20Visualization/highcharts/highcharts.html">
+<dont-run-c-alert>
+  <p>Showing the alerts the right way is important!</p>
+</dont-run-c-alert>
+
+<link rel="import" href="https://static.scania.com//build/global/2.3.1//html/component/Bootstrap/alert/alert.html">
+
             </div>
 
             <div class="panel panel-default copyable">    
-              <div class="panel-body"> 
+              <div class="panel-body">
 
-                <c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
-                </c-highcharts>
-                <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Data%20Visualization/highcharts/highcharts.html">
+                <c-alert>
+                  <p>Showing the alerts the right way is important!</p>
+                </c-alert>
+
+                <link rel="import" href="https://static.scania.com//build/global/2.3.1//html/component/Bootstrap/alert/alert.html">
+
               </div>
             </div>
           </div> 
