--- a/docs/template/html-copy-paste/c-html-copy-paste-components.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-components.html
@@ -221,11 +221,15 @@
 
             </div>
 
-                <c-alert>
-                  <p>Showing the alerts the right way is important!</p>
-                </c-alert>
+            <div class="copyable">    
 
-                <link rel="import" href="https://static.scania.com//build/global/2.3.1//html/component/Bootstrap/alert/alert.html">
+              <c-alert type="danger">
+                <p>Use the alert component to show your messages!</p>
+              </c-alert>
+
+              <link rel="import" href="https://static.scania.com//build/global/2.3.1//html/component/Bootstrap/alert/alert.html">
+
+            </div>
           </div> 
                                            
         </div>
