--- a/docs/template/html-copy-paste/c-html-copy-paste-components.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-components.html
@@ -163,7 +163,12 @@
 
         .code-to-copy   {
             display: none;
-        }      
+        }
+
+        textarea#temp-element,
+        .code-to-copy   {
+            display: none;
+        }        
 
     </style>
 
@@ -197,7 +202,7 @@
   <dont-run-c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
   </dont-run-c-highcharts>
 
-  <link rel="import" href="https://static.scania.com//build/global/2.3.2//html/component/Data%20Visualization/highcharts/highcharts.html">
+  <link rel="import" href="https://static.scania.com//build/global/2.3.2/html/component/Data%20Visualization/highcharts/highcharts.html">
             </div>
 
             <div class="panel panel-default copyable">    
