--- a/docs/template/html-copy-paste/c-html-copy-paste-components.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-components.html
@@ -228,7 +228,7 @@
 
             <div class="copyable">    
 
-              <c-alert type="danger">
+              <c-alert type="danger" fullbleed>
                 <p>Use the alert component to show your messages!</p>
               </c-alert>
 
@@ -243,6 +243,7 @@
   <!-- All developers are using Google Chrome, so we do not test for other browsers -->
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject-dev-zone.js"></script>
  
+   <script src="https://static.scania.com/vendors/components/pure-js/clipboard.js/1.7.1/dist/clipboard.min.js"></script> 
 
   <script>
     Polymer({
