--- a/docs/template/html-copy-paste/c-html-copy-paste-page copy.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste-page copy.html
@@ -223,6 +223,8 @@
 
   <!-- All developers are using Google Chrome, so we do not test for other browsers -->
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject-dev-zone.js"></script>
+
+  <script src="https://static.scania.com/vendors/components/pure-js/clipboard.js/1.7.1/dist/clipboard.min.js"></script> 
  
 
   <script>
