--- a/docs/template/html-copy-paste/html-copy-paste-components.html
+++ b/docs/template/html-copy-paste/html-copy-paste-components.html
@@ -118,9 +118,8 @@
   c-main-content {background-color: #E2E2E2;}
 
 
-  .bs-callout,
-  .highlight {
-      display: none;
+  c-main-content > section, c-main-content.app > section {
+    padding: 80px 20px !important;
   }
 
   </style>
