--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -353,8 +353,7 @@
 
     </style>
 
-    <link rel="stylesheet" type="text/css" href="https://static.scania.com/resources/fonts/scania-sans/scania-tools-fonts.css">
-    <!--  <link rel="stylesheet" href="https://static.scania.com/resources/fonts/scania-sans/cyrillic/scania-cyrillic-fonts.css" type="text/css">  -->   
+    @import url("https://static.scania.com/resources/fonts/scania-sans/scania-tools-fonts.css"");  
 
       <div class="container-fluid">
         <div class="row">
