--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -22,10 +22,18 @@
 
 
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js?preload=false"></script>
+
+      <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/corporate-header/corporate-header.html?dom=shady">
+      <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/corporate-footer/corporate-footer.html?dom=shady">
+      <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Content + Teasers/main-content/main-content.html?dom=shady">
+      <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/main-navigation/main-navigation.html?dom=shady">                  
+
 </head>
 
 <body class="scania">
+
+
 
   <c-corporate-header site-name="UX Library" site-url="/ux-library/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
