--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -16,7 +16,7 @@
 
   <script>
     window['Polymer'] = window['Polymer'] || {};
-    window['Polymer']['dom'] = 'shadow';    
+    window['Polymer']['dom'] = 'shady';    
   </script>
 
 
@@ -65,7 +65,7 @@
 
 
 
-      <link rel="import" href="https://scania.github.io//corporate-ui/template/html-copy-paste/c-html-copy-paste.html">
+      <link rel="import" href="https://scania.github.io//corporate-ui/template/html-copy-paste/c-html-copy-paste.html?dom=shadow">
 
       <c-html-copy-paste fullbleed></c-html-copy-paste> 
 
