import separate CSS

--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -1,5 +1,11 @@
 <dom-module id="c-html-copy-paste">
-  <link rel="import" type="css" href="https://static.scania.com/build/global/2.3.2/css/corporate-ui.css">
+
+  <link rel="import" type="css" href="https://static.scania.com/vendors/frameworks/bootstrap/3.2.0/dist/css/bootstrap-org.css">
+  <link rel="import" type="css" href="https://static.scania.com/resources/fonts/scania-sans/scania-fonts.css">
+  <link rel="import" type="css" href="https://static.scania.com/resources/fonts/font-awesome/font-awesome.css">
+  <link rel="import" type="css" href="https://static.scania.com/resources/icons/scania/icons.css">
+  <link rel="import" type="css" href="https://static.scania.com/build/global/2.3.2/css/core.css">
+
   <template>
 
     <style>
