Removed 2nd navigation

--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -15,7 +15,7 @@
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 </head>
 
-<body class="scania" ng-controller="UxLib as uxlib">
+<body class="scania" ng-controller="ThisSite as thissite">
 
   <c-corporate-header site-name="Developers" site-url="/">
     <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
@@ -25,13 +25,13 @@
   <c-main-content>
     <c-main-navigation ng-cloak>
       <primary-items>
-        <nav-item ng-repeat="item in uxlib.items" location="{{item.url}}" nav-item="item" active="{{item.active}}" ng-click="uxlib.changeView($event, item)"></nav-item>
+        <nav-item ng-repeat="item in thissite.items" location="{{item.url}}" nav-item="item" active="{{item.active}}" ng-click="thissite.changeView($event, item)"></nav-item>
       </primary-items>
     </c-main-navigation>
 
-    <c-main-navigation ng-cloak>
+<!--     <c-main-navigation ng-cloak>
       <primary-items>
-        <nav-item ng-repeat="item in uxlib.items" location="{{item.url}}" active="{{item.active}}" ng-click="uxlib.changeView($event, item)">
+        <nav-item ng-repeat="item in thissite.items" location="{{item.url}}" active="{{item.active}}" ng-click="thissite.changeView($event, item)">
           {{item.name}}
           <sub-navigation ng-if="item.active && item.children" item="item" sub-navigation>
             <nav-item ng-repeat="subItem in item.children" location="{{item.url}}">{{subItem.name}}</nav-item>
@@ -39,7 +39,7 @@
         </nav-item>
       </primary-items>
     </c-main-navigation>
-
+ -->
     <section class="light">
       <div class="container">
         <h2>Angular navigation demo</h2>
@@ -53,15 +53,17 @@
 
   <c-corporate-footer></c-corporate-footer>
 
-  <script src="https://static.scania.com/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
+  <script src="/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
 
   <script>
     angular.module('CorporateUI', [])
-      .controller('UxLib', [UxLib])
+      .controller('ThisSite', [ThisSite])
       .directive('navItem', navItem)
       .directive('subNavigation', ['$compile', '$timeout', subNavigation]);
-    function UxLib() {
+
+    function ThisSite() {
       var vm = this;
+
       vm.items = [
         { name: 'home', location: '/', active: true },
         { name: 'libs', location: '/libs/', children: [
@@ -74,6 +76,7 @@
         ] },
         { name: 'contact', location: '/contact/' }
       ];
+
       vm.changeView = function($event, target) {
         $event.preventDefault();
         for(i in vm.items) {
@@ -83,6 +86,7 @@
         target.active = true;
       }
     }
+
     function navItem() {
       return {
         restrict: 'A',
@@ -95,6 +99,7 @@
           </sub-navigation>'
       }
     }
+
     function subNavigation($compile, $timeout) {
       return {
         restrict: 'A',
@@ -102,14 +107,35 @@
         compile: function compile(tElement, tAttrs, transclude) {
           // Might be that we can set third param to false (visible attribute in dom)
           tAttrs.$set('template', tElement.html());
+
           // Need to a way to reset and compile template using template attribute when user clicks the navigation
           iAttrs.$observe('ngIf', function() {
-            console.log('apa')
+            console.log('Alive and kicking!')
           });
         }
       }
     }
+
     window.CorporateUi.baseComponents();
   </script>
+
+
+  <script>
+   // ServiceWorker is a progressive technology. Ignore unsupported browsers
+  if ('serviceWorker' in navigator) {
+    console.log('CLIENT: service worker registration in progress.');
+    navigator.serviceWorker.register('https://cdn.css-tricks.com/service-worker.js').then(function() {
+      console.log('CLIENT: service worker registration complete.');
+    }, function() {
+      console.log('CLIENT: service worker registration failure.');
+    });
+  } else {
+    console.log('CLIENT: service worker is not supported.');
+  }
+  </script>
+
+
+
+
 </body>
 </html>
