--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -66,7 +66,7 @@
 
       vm.items = [
         { name: 'home', location: '/', active: true },
-        { name: 'libs', location: '/libs/', children: [
+        { name: 'libraries', location: '/libs/', children: [
           { name: 'angular', location: '/libs/angular/' },
           { name: 'react', location: '/libs/react/' }
         ] },
